--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "eslint-config-google": "^0.14.0"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0",
+    "firebase-tools": "^13.31.1",
     "git": "^0.1.5"
   }
 }
